--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_BASE_URL=https://api-autorepair-be.up.railway.app
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZXZvbHZlZC1yYW0tNzguY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZXZvbHZlZC1yYW0tNzguY2xlcmsuYWNjb3VudHMuZGV2JA
