--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.30.0",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.8.4",
     "flowbite": "^3.1.2",
