adding clerk signin and singup with tips API

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BASE_URL=https://api-autorepair-be.up.railway.app
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZXZvbHZlZC1yYW0tNzguY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_wsGzbcbYNBc6MfPZCZkaGIZ4pi5FpKTTdU8WwiY2Fe
