--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.30.0",
+    "@clerk/react-router": "^1.3.0",
+    "@clerk/themes": "^2.2.36",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.8.4",
     "flowbite": "^3.1.2",
