--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.8.4",
     "flowbite": "^3.1.2",
+    "mapbox-gl": "^3.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.5.1"
   },
