--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@clerk/clerk-react": "^5.30.0",
     "@clerk/react-router": "^1.3.0",
     "@clerk/themes": "^2.2.36",
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "@tinymce/tinymce-react": "^6.1.0",
-    "axios": "^1.8.4",
+    "axios": "^1.11.0",
     "flowbite": "^3.1.2",
-    "mapbox-gl": "^3.11.1",
+    "mapbox-gl": "^3.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
